syntax = "proto3";

package pane;

option go_package = "github.com/windmilleng/tilt/internal/pane/proto;proto";

service Pane {
  rpc ConnectPane (stream PaneControl) returns (DoneReply) {}
}

message PaneControl {
  oneof control {
    ConnectRequest connect = 1;
    WindowChange window_change = 2;
  }
}


message ConnectRequest {
  string fd_socket_path = 1;
}

message WindowChange {
}

message DoneReply {
}